# list

./: .gitignore  CMakeLists.txt  README.md  listFuncs.h
flags/: flags.cmake
headers/listLib/: dump.h  listLib.h  listLib.h.gch  logs.h
headers/logs/: logs.h
other/dotGraph/: bebra.dot
other/logs/: myPersonalLogs.txt
sources/: CMakeLists.txt
sources/listLib/: CMakeLists.txt  listLib.cpp
sources/logs/: CMakeLists.txt  logs.cpp
tools/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tools/main/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
tools/tests/: CMakeLists.txt  Makefile  cmake_install.cmake  logtest.cpp
